--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,71 @@
 * {
-  background-color: aqua;
+  padding: 0;
+  margin: 0;
+  font-family: 'Times New Roman', Times, serif;
+  list-style: none;
+}
+
+h1 {
+  padding: 5vh 0 1vh 1vh;
+  font-size: 29px;
+  font-weight: 900;
+}
+
+#outline {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#score-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#actions {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding: 3vh 0 1vh 4vh;
+}
+
+#actions button {
+  width: max-content;
+  height: max-content;
+  padding: 3px;
+}
+
+#display-section {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 2px solid black;
+  margin-left: 4vh;
+}
+
+.adding-scores {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 3vh 50vh 1vh 0;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#form ul input {
+  border: 2px solid black;
+  height: 18px;
+  font-size: 14px;
+}
+
+#form ul button {
+  width: max-content;
+  height: max-content;
+  padding: 3px;
+  margin-left: 70%;
 }
