--- a/src/style.css
+++ b/src/style.css
@@ -40,8 +40,14 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  border: 2px solid black;
+  border: 2px solid rgb(58, 54, 54);
   margin-left: 4vh;
+  padding: 2px;
+  width: 40vh;
+}
+
+#display-section li:nth-child(even) {
+    background-color: rgb(64, 207, 207);
 }
 
 .adding-scores {
