--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,7 @@
 #actions button {
   height: 24px;
   margin: 8px;
-  color: red;
+  color: rgb(243, 35, 35);
   border: 1px solid rgb(77, 52, 52);
   border-radius: 6px;
   width: 60px;
